--- a/java/DesignPattern/bin/.gitignore
+++ b/java/DesignPattern/bin/.gitignore
@@ -1,9 +1,3 @@
-/adapter/
-/factory/
-/idcard/
-/iterator/
-/proto/
-/prototype/
-/singleton/
-/template/
-/builder/
+/abstractfactory/
+/factoryidcard/
+/aflistfactory/
